--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "version": "0.0.1",
   "dependencies": {
     "bower": "^1.7.9",
-    "lite-server": "^2.2.2",
-
     "grunt": "^1.0.1",
-    "grunt-contrib-concat": "^1.0.1"
+    "grunt-contrib-clean": "^1.0.0",
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-cssmin": "^1.0.1",
+    "grunt-contrib-uglify": "^2.0.0",
+    "grunt-usemin": "^3.1.1",
+    "lite-server": "^2.2.2"
   },
   "scripts": {
-    "start": "lite-server"
+    "start": "lite-server",
+    "build":"grunt"
   }
 }
