--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "semantic": "^2.2.2",
     "angular": "^1.5.8",
     "angular-route": "^1.5.8",
-    "angular-resource": "^1.5.8"
+    "angular-resource": "^1.5.8",
+    "crypto-js": "^3.1.6"
   }
 }
