--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
     "angular": "^1.5.8",
     "angular-route": "^1.5.8",
     "angular-resource": "^1.5.8",
-    "crypto-js": "^3.1.6"
+    "crypto-js": "^3.1.6",
+    "angular-sanitize": "^1.5.8"
   }
 }
