--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,8 @@
     "angular-route": "^1.5.8",
     "angular-resource": "^1.5.8",
     "crypto-js": "^3.1.6",
-    "angular-sanitize": "^1.5.8"
+    "angular-sanitize": "^1.5.8",
+    "intro.js": "^2.2.0",
+    "angular-cookies": "^1.5.8"
   }
 }
